<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="25dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grettings"
            android:textSize="37sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appsname"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/wavebottom"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent">
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:paddingBottom="24dp"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardform"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:padding="24dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appname"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hform"
                android:textColor="#666666"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingBottom="6dp" />

            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/namalengkap"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingBottom="6dp" />

            <EditText
                android:id="@+id/etNim"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/nomornim"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:textColorHint="@color/gray"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodi"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingBottom="6dp" />

            <Spinner
                android:id="@+id/spinnerProdi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/edittextshape"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeniskelamin"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laki_laki"
                    android:textSize="14sp"
                    android:buttonTint="@color/black"/>
                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"
                    android:textSize="14sp"
                    android:layout_marginStart="24dp"
                    android:buttonTint="@color/black"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <CheckBox
                    android:id="@+id/cbMembaca"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/membaca"/>

                <CheckBox
                    android:id="@+id/cbOlahraga"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/olahraga"/>

                <CheckBox
                    android:id="@+id/cbGaming"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/gaming"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:weightSum="3">

                <CheckBox
                    android:id="@+id/cbMusik"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/musik"/>

                <CheckBox
                    android:id="@+id/cbTraveling"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/traveling"/>

                <CheckBox
                    android:id="@+id/cbFotografi"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/fotografi"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/buttonprofile"
                android:text="@string/tampilkan_profil"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>