<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topProfile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:background="@drawable/wace_scene"
        android:paddingTop="25dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/imgproffile"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardProfile"
            android:text=""/>

        <TextView
            android:id="@+id/tvProdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="13sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNama"
            android:text=""/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:layout_marginTop="-50dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profilebody"
            android:orientation="vertical"
            android:elevation="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/nomor_induk_mahasiswa"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNimDetail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/viewteks"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingTop="1dp"
                android:paddingHorizontal="16dp"
                android:gravity="center_vertical"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jeniskelamin"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvGenderDetail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/viewteks"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingTop="1dp"
                android:paddingHorizontal="16dp"
                android:gravity="center_vertical"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hobi"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvHobiDetail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/viewteks"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingTop="1dp"
                android:paddingHorizontal="16dp"
                android:gravity="center_vertical"
                android:text=""/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>